<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_deload_settings_title"
        android:key="pref_deload_settings">
        <CheckBoxPreference
            android:key="pref_deload_enabled"
            android:summary="@string/pref_deload_enabled_summary"
            android:title="@string/pref_deload_enabled_title"
            android:defaultValue="false"/>
        <EditTextPreference
            android:key="pref_deload_freq"
            android:summary="@string/pref_deload_freq_summary"
            android:title="@string/pref_deload_freq_title"
            android:inputType="number"
            android:dependency="pref_deload_enabled"
            android:defaultValue="1"/>
        </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_max_settings_title"
        android:key="pref_max_settings">
        <EditTextPreference
            android:key="pref_squat_max"
            android:summary="@string/pref_squat_max_summary"
            android:title="@string/pref_squat_max_title"
            android:inputType="number"
            android:defaultValue="@integer/pref_squat_default_max"/>
        <EditTextPreference
            android:key="pref_bench_max"
            android:summary="@string/pref_bench_max_summary"
            android:title="@string/pref_bench_max_title"
            android:inputType="number"
            android:defaultValue="@integer/pref_bench_default_max"/>
        <EditTextPreference
            android:key="pref_deadlift_max"
            android:summary="@string/pref_deadlift_max_summary"
            android:title="@string/pref_deadlift_max_title"
            android:inputType="number"
            android:defaultValue="@integer/pref_deadlift_default_max"/>
        <EditTextPreference
            android:key="pref_overheadpress_max"
            android:summary="@string/pref_overheadpress_max_summary"
            android:title="@string/pref_overheadpress_max_title"
            android:inputType="number"
            android:defaultValue="@integer/pref_overheadpress_default_max"/>
        <CheckBoxPreference
            android:key="pref_training_max_adjustment_enabled"
            android:summary="@string/pref_training_max_adjustment_summary"
            android:title="@string/pref_training_max_adjustment_title"
            android:defaultValue="false"/>
        </PreferenceCategory>
</PreferenceScreen>